# mem

./: .gitignore  Cargo.toml  Makefile  README.md  bench_valgrind.py
c_src/: clock.c
csapp/: .gitignore  Makefile  clock.c  clock.h  fcyc.c  fcyc.h  main.c
docs/: 00_TODO.txt  02_matrix_multiplication.md  03_cache_control_instructions.md  03_memory_details.md  TODO.txt
docs/notes/: mit_perf_timing_measurements.md
paoloni/: .gitignore  Makefile  bench.c  bench_lfence.c  bench_orig.c  bench_rdtscp.c  common.c  common.h
results/: Makefile  add_results.py  cachegrind_res_LL_2.csv  comparison.ipynb  plot.ipynb  results.csv  results.db
src/: bench.c  bench.h  main.c  mm.c
src/01_microbenchmarking_paoloni/: common.c
src/02_matrix_multiplication/: .gitignore  Makefile  bench.h  clock.h  main.c
src/02_matrix_multiplication/results/: comparison.ipynb  plot.ipynb
src/02_sum_by_row_vs_by_col/: Cargo.toml
src/02_sum_by_row_vs_by_col/benches/: my_benchmark.rs
src/02_sum_by_row_vs_by_col/src/: lib.rs
src/03_memory_details/: 03_memory_details.md  cpuid_output.csv  lshw_output.csv  tlb_4k.csv  virtual_addressing.md
